# tmsiti-fastapi-

./: .env  .replit  Dockerfile  README.md  create_tables.py  docker-compose.yml  pyproject.toml  replit.md  requirements_list.txt  run.py  tmsiti.db
app/: main.py
app/api/v1/: activity.py  admin.py  auth.py  contact.py  institute.py  news.py  regulations.py  user.py
app/core/: config.py  security.py
app/db/: database.py
app/db/models/: __init__.py  activity.py  contact.py  institute.py  news.py  regulations.py  user.py
app/localization/: en.json  ru.json  uz.json
app/middlewares/: language.py
app/schemas/: activity.py  contact.py  institute.py  news.py  regulations.py  user.py
app/services/: auth_service.py  utils.py
attached_assets/: Pasted-https-www-tmsiti-uz-Texnik-me-yorlash-va-standartlashtirish-ilmiy-tadqiqot-instituti-web-saytn-1752055057550_1752055057551.txt
